<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/quiz_logo"
        android:src="@drawable/logo"
        android:layout_marginTop="25dp"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">
    </ImageView>
    <RelativeLayout
        android:id="@+id/wrap_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/quiz_logo"
        android:layout_margin="8dp">
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/info_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            >
            <LinearLayout
                android:padding="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edtUser"
                    android:hint="@string/username"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_singleLineEllipsis="true"
                    />
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edtPassword"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_singleLineEllipsis="true"
                    />

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_below="@+id/info_login"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btn_sign_up"
                android:text="@string/sign_up"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_sign_in"
                android:text="@string/sign_in"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>

