<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Playing">

    <ImageView
        android:id="@+id/questionImage"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:layout_width="300dp"
        android:layout_height="200dp"
        />
    <TextView
        android:id="@+id/questionText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_below="@+id/questionImage"
        android:layout_width="350dp"
        android:layout_height="150dp" />
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/group"
            android:paddingTop="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txtScore"
                    android:textColor="@android:color/white"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="36sp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/txtTotalQuestions"
                    android:textColor="@android:color/white"
                    android:gravity="center_horizontal"
                    android:text="1/15"
                    android:textSize="36sp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:max="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnAnswerA"
                android:text="@string/a"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:theme="@style/MyButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="#ff8a80"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnAnswerB"
                android:text="@string/b"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:theme="@style/MyButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="#ff8a80"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnAnswerC"
                android:text="@string/c"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:theme="@style/MyButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="#ff8a80"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnAnswerD"
                android:text="@string/d"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:theme="@style/MyButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="#ff8a80"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>